# mag

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  .ignore  CMakeLists.txt  INSTALL.md  OPTIMIZE.md  README.md  architecture.md  build-debug  build-debug.ps1  build-debug.sh  build-release  build-release-debug  build-release-debug.ps1  build-release-debug.sh  build-release.ps1  build-release.sh  build-tracy  build-tracy.ps1  build-tracy.sh  build-wrapper.sh  color test  color_test.c  debug-ncurses.sh  debug.gdb  debug.sh  gtags.conf  perf-record.sh  run-build.bat  run-build.ps1  run-build.sh  run-debug.sh  run-tests.sh  run-tracy.sh  run.gdb  run.sh  test.cpp  (+4 more)
basic/: ascii_drawing_commands.cpp  ascii_drawing_commands.hpp  buffer_commands.cpp  buffer_commands.hpp  build_commands.cpp  build_commands.hpp  capitalization_commands.cpp  capitalization_commands.hpp  cmake_commands.cpp  commands.cpp  commands.hpp  completion_commands.cpp  completion_commands.hpp  configuration_commands.cpp  configuration_commands.hpp  copy_commands.cpp  copy_commands.hpp  cpp_commands.cpp  cpp_commands.hpp  cursor_commands.cpp  cursor_commands.hpp  diff_commands.cpp  diff_commands.hpp  directory_commands.cpp  directory_commands.hpp  hash_commands.cpp  hash_commands.hpp  help_commands.cpp  help_commands.hpp  highlight_commands.hpp  html_commands.cpp  ide_commands.cpp  ide_commands.hpp  indent_commands.cpp  indent_commands.hpp  javascript_commands.cpp  macro_commands.cpp  macro_commands.hpp  markdown_commands.cpp  markdown_commands.hpp  (+31 more)
builtin_commands/: buffer_commands.cpp  buffer_commands.hpp  commands.cpp  commands.hpp  copy_commands.cpp  copy_commands.hpp  directory_commands.hpp  shift_commands.cpp  shift_commands.hpp  tokenize_cpp.cpp  window_commands.hpp
clang-format/: clang_format.cpp
clang_format/: clang_format.cpp  clang_format.hpp
clients/: cell.hpp  completion_results.cpp  completion_results.hpp  mini_buffer_results.cpp  mini_buffer_results.hpp  ncurses.cpp  ncurses.hpp  render.cpp  render.hpp  sdl.cpp  sdl.hpp  tokenizer_check_point.cpp  tokenizer_check_point.hpp  visible_region.cpp  visible_region.hpp  window_cache.cpp  window_cache.hpp
cmake/: FindZSTD.cmake
compression/: compression_general.hpp  zlib.cpp  zlib.hpp  zstd.cpp  zstd.hpp
custom/: buffer_commands.cpp  buffer_commands.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  copy_commands.cpp  copy_commands.hpp  directory_commands.cpp  directory_commands.hpp  movement.cpp  search_commands.cpp  search_commands.hpp  shift_commands.cpp  shift_commands.hpp  solarized_dark.cpp  solarized_dark.hpp  tokenize_cpp.cpp  tokenize_cpp.hpp  window_commands.cpp  window_commands.hpp
decorations/: decoration_column_number.cpp  decoration_cursor_count.cpp  decoration_line_ending_indicator.cpp  decoration_max_line_number.cpp  decoration_max_line_number.hpp  decoration_pinned_indicator.cpp  decoration_read_only_indicator.cpp  decoration_read_only_indicator.hpp
git/: find_file.cpp  find_file.hpp  git.cpp  git.hpp  grep.cpp  grep.hpp  tokenize_git_commit_edit_message.cpp  tokenize_git_commit_edit_message.hpp  tokenize_patch.cpp  tokenize_patch.hpp
gnu_global/: ctags.cpp  ctags.hpp  generic.cpp  gnu_global.cpp  gnu_global.hpp
mains/: main.cpp
man/: man.cpp  man.hpp
overlays/: overlay_highlight_string.cpp  overlay_highlight_string.hpp  overlay_incorrect_indent.cpp  overlay_indent_guides.cpp  overlay_indent_guides.hpp  overlay_matching_pairs.cpp  overlay_matching_region.cpp  overlay_matching_region.hpp  overlay_matching_tokens.cpp  overlay_matching_tokens.hpp  overlay_merge_conflicts.cpp  overlay_nearest_matching_identifier.cpp  overlay_nearest_matching_identifier.hpp  overlay_nearest_matching_identifier_before_after.cpp  overlay_selected_line.hpp
prose/: alternate.cpp  alternate.hpp  find_file.cpp  find_file.hpp  helpers.cpp  helpers.hpp  repository.cpp  repository.hpp  search.cpp  search.hpp
render/: cell.hpp  render.cpp  render.hpp  screen_position.cpp  screen_position.hpp  window_cache.cpp  window_cache.hpp
res/: Windows_RC.rc  diff_COPYING  logo.png.kra  resources.h
src/: buffer.cpp  buffer.hpp  buffer_commands.cpp  buffer_commands.hpp  buffer_handle.cpp  buffer_handle.hpp  buffer_id.hpp  case.cpp  change.cpp  change.hpp  client.cpp  client.hpp  command.cpp  command.hpp  command_macros.cpp  command_macros.hpp  commands.cpp  commands.hpp  comment.cpp  comment.hpp  commit.cpp  commit.hpp  completion.cpp  completion.hpp  completion_results.cpp  completion_results.hpp  config.cpp  config.hpp  contents.cpp  contents.hpp  cursor.hpp  decoration.cpp  decoration.hpp  dialog.cpp  dialog.hpp  diff.cpp  diff.hpp  directory_commands.cpp  edit.cpp  edit.hpp  (+58 more)
syntax/: common.cpp  decoration_column_number.cpp  decoration_cursor_count.cpp  decoration_cursor_count.hpp  decoration_line_ending_indicator.cpp  decoration_line_number.cpp  decoration_line_number.hpp  decoration_max_line_number.cpp  decoration_pinned_indicator.cpp  decoration_pinned_indicator.hpp  decoration_read_only_indicator.cpp  overlay_highlight_string.cpp  overlay_highlight_string.hpp  overlay_incorrect_indent.cpp  overlay_incorrect_indent.hpp  overlay_indent_guides.cpp  overlay_matching_pairs.cpp  overlay_matching_pairs.hpp  overlay_matching_region.cpp  overlay_matching_region.hpp  overlay_matching_tokens.cpp  overlay_matching_tokens.hpp  overlay_merge_conflicts.hpp  overlay_nearest_matching_identifier.cpp  overlay_nearest_matching_identifier_before.cpp  overlay_nearest_matching_identifier_before.hpp  overlay_nearest_matching_identifier_before_after.cpp  overlay_nearest_matching_identifier_before_after.hpp  overlay_preferred_column.cpp  overlay_preferred_column.hpp  overlay_selected_line.cpp  overlay_selected_line.hpp  overlay_trailing_spaces.cpp  overlay_trailing_spaces.hpp  tokenize_buffer_name.cpp  tokenize_buffer_name.hpp  tokenize_cmake.cpp  tokenize_cmake.hpp  tokenize_color_test.cpp  tokenize_cplusplus.cpp  (+44 more)
tests/: test_build_commands.cpp  test_commands.cpp  test_compiler.cpp  test_completion.cpp  test_compression.cpp  test_key.cpp  (+19 more)
(+313 files in other folders)
